<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Merry Mayflower</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Title....</string>
    <string name="search_favorite">Search Favorites....</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu">Menu</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="favorite_title">Favourite List</string>
    <string name="about_title">About- Mayflower Hymn Book</string>

    <!-- FONTS -->
    <string name="roboto_thin">fonts/Roboto-Thin.ttf</string>
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
</resources>
